1、修改过时方法